--- a/client/main.css
+++ b/client/main.css
@@ -19,9 +19,10 @@ body {
   opacity: 0;
   width: 0px;
   height: 0px;
-}      
+}
 
-.title, #loading {
+.title,
+#loading {
   text-align: center;
 }
 
@@ -34,5 +35,5 @@ a {
 }
 
 a:hover {
-  color: lime;
+  color: rgb(44, 174, 250);
 }
